2002-07-07  Glynn Foster  <glynn.foster@sun.com>

	* yelp.desktop.in (X-GNOME-DocPath): 

2002-07-06  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl
	- make <part> and <chapter> have plain unstyled toc-s
	  until yelp.render.toc is sufficently advanced
	- correctly pass in a string parameter when matching /book
	- call correct titlepage template for <book>

2002-07-05  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl
	- make <book> support somewhat work

2002-07-05  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl
	- rationalize heading styles
	- don't center title
	- tweak list indenting

2002-06-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-info.c (yelp_info_init): sort info pages.

2002-06-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: added patch from Kang Jeong-Hee to support
	  toolbar style "both_horiz". Fixes #85529

	* src/yelp-view-toc.c (toc_page_end): 
	- don't scale the gnome-button.
	- mark some strings for translation. Fixes #84020

2002-06-26  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	- Fixes #84713
	(yelp_window_new): set icon on window.
	(window_load_icon): added, loads the gnome-help.png icon.
	(window_about_cb): set the icon in the about box.

	* README: removed old information

	* src/yelp-main.c: follow yelp style.

2002-06-19  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.1

	* NEWS: updated for 1.0.1

	* configure.in: updated to 1.0.1

2002-06-10  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0

	* configure.in: updated to 1.0

2002-06-03  Mikael Hallendal  <micke@codefactory.se>

	* Release 0.10

	* NEWS: updated for 0.10

	* configure.in: 0.10

	* configure.in: bumped gtkhtml2 deps.

	* src/yelp-window.c (window_handle_uri): 
	- let the index view handle it's own uri's

	* src/yelp-view-content.c (content_reader_finished_cb): 
	- fixed a possible crash

	* src/yelp-view-index.c: